[project]
name = "easy_dnr"
version = "0.1.0"
description = "Distribution Network Reconfiguration (DNR) benchmark networks, evaluation, and solvers built on pandapower."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  { name = "Baptiste Chevalier", email = "chevalier.baptiste@keio.jp" },
]
keywords = ["distribution-network", "reconfiguration", "DNR", "power-systems", "pandapower"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
"Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy",
  "pandapower",
  "networkx",
  "matplotlib",
  "troma @ git+https://github.com/baptistechev/TrOMA.git@beta",
]

[project.optional-dependencies]
dnrlib = [
  "dnrlib @ git+https://github.com/baptistechev/DNRlib.git@fix/taylor",
  "GridCalEngine",
  "pyomo",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["easy_dnr*"]
